--- a/tests/m3uParser.Tests/Sample.resx
+++ b/tests/m3uParser.Tests/Sample.resx
@@ -121,7 +121,7 @@
   <data name="header_with_parameters" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\header-with-parameters.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="simple_vod_playlist" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\simple-vod-playlist.m3u;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="simple_vod" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\simple_vod.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
