--- a/tests/m3uParser.Tests/Sample.resx
+++ b/tests/m3uParser.Tests/Sample.resx
@@ -118,8 +118,20 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="big_list" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\big_list.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="format_specs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\format_specs.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="header_with_parameters" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\header-with-parameters.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="iptv_sample" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\iptv_sample.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="sample_paste_bin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\sample_paste_bin.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="simple_vod" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\simple_vod.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
